<resources>
    <string name="app_name">HappyFit</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hintmail">E-mail</string>
    <string name="frgtpass">Forgot your password?</string>
    <string name="go">Here We Go</string>
    <string name="signup">Don\'t have an account? Sign up</string>
    <string name="prof">Profile</string>
    <string name="Forum" />
    <string name="Training" />
    <string name="frm">Forum</string>
    <string name="train">Training</string>
    <string name="diett">DietProgram</string>

    <string name="Exprog">Exercise Program</string>
    <string name="rewards">Reaw</string>
    <string name="rewardss">Rewards</string>

    <string name="trainingvideos">Watch Training Videos Now</string>
    <string name="dietprog">Diet Program</string>
    <string name="exprog">Exercise Program</string>
    <string name="friends">Friends</string>
    <string name="forum">Forum</string>
    <string name="dietprg">Diet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nametext">Enter Your Name:</string>
    <string name="emailadd">Please enter your friend\'s e-mail adress:</string>
    <string name="addfriend">Add as friend</string>
    <string name="emailadress">Enter your friend\'s e-mail adress:</string>
    <string name="train1">TRAINING 1</string>
    <string name="train2">TRAINING 2</string>
    <string name="power" />
    <string name="pow">More Power To You</string>
    <string name="commonques">Most Common Questions</string>
    <string name="ques1">What should I eat in a typical working day for breakfast?</string>
    <string name="name1">Addison Sterling</string>
    <string name="name2">Kerry Royce</string>
    <string name="ques2">Fruit or fry-up?</string>
    <string name="name3">Addy Meade</string>
    <string name="ques3">What is your best tip for everyday fitness?</string>
    <string name="name4">John Gilbert</string>
    <string name="name5">Elena Forbes</string>
    <string name="name6">Matt Donovan</string>
    <string name="latestques">Latest Questions</string>
    <string name="hour">3 hours ago</string>
    <string name="forumbttn">FORUM</string>
    <string name="profbttn">PROFILE</string>
    <string name="stats">STATS</string>
    <string name="trainingbttn">TRAINING</string>
    <string name="welcomee">Welcome to Happy Fit Irmak</string>
    <string name="walker">The Walker</string>
    <string name="goldmem">Gold Member</string>
    <string name="Abs">Abs Killer</string>
    <string name="empty" />
    <string name="rew">Happy Fit Rewards</string>
    <string name="Welcome">WELCOME!</string>
    <string name="kahvaltı">Kahvaltı</string>
    <string name="breakss">Breakfast</string>
    <string name="breakfast">Breakfast</string>
    <string name="Launch">Launch</string>
    <string name="Dinner">Dinner</string>
    <string name="dinner">DINNER</string>
    <string name="SNACK">SNACK</string>
    <string name="breakfastt">Breakfast Time!</string>
    <string name="gr">30 Grams</string>
    <string name="cal">124 Calories</string>
    <string name="largesize">Large Sized Tomatoe</string>
    <string name="cal2">33 Calories</string>
    <string name="egg">One Egg</string>
    <string name="cal3">75 Calories</string>
    <string name="bread">Two Slice of Bread</string>
    <string name="bread2">265 Kilocalories</string>
    <string name="milk">One Glass of Milk</string>
    <string name="milk2">46 Kilocalories</string>
    <string name="name11">Fabienne Zuhler</string>
    <string name="name12">Micheal Jordan</string>
    <string name="name13">Sarah Kylee</string>
    <string name="late">Latest Questions</string>
    <string name="common">Most Common Questions</string>
    <string name="name23">Calli Rapson</string>
    <string name="name24">Kim Tyler</string>
    <string name="name25">Sarah Davidson</string>
    <string name="quess1">How many liters of water to drink after exercises?</string>
    <string name="quess2">How many days a week should we doing exercises?</string>
    <string name="quess3">What time should we eat at the latest?</string>
    <string name="salad">A Bowl Of Salad</string>
    <string name="orange">A Glass Of Orange Juicr</string>
    <string name="orangee">A Glass Of Orange Juice</string>
    <string name="peanut">20 Gram Almond</string>
    <string name="luncch">LUNCH TİME!</string>
    <string name="soup">A Bowl of Soup</string>
    <string name="fish">One Portion of Fish</string>
    <string name="salaad">A Bowl of Salad</string>
    <string name="wine">A Glass of Wine</string>
    <string name="daily">Your Weekly Workout Schedule</string>
    <string name="Cardio">Cardio</string>
    <string name="FULL">Full Body Workout</string>
    <string name="cross">CrossFit</string>
    <string name="zumba">Zumba</string>
    <string name="start">Let\'s Start!</string>
    <string name="add">ADD FRIEND</string>
</resources>
